# Albion-Guild-Discord-Bot

./: Cargo.toml  README.md
src/: main.rs
src/api/: deserialize.rs  errors.rs  fetch.rs  mod.rs
src/commands/: balance.rs  mod.rs  ping.rs
src/handlers/: guild_create_handler.rs  interaction_create_handler.rs  message_handler.rs  mod.rs  ready_handler.rs
src/models/: discord.rs  mod.rs
src/utils/: config.rs
