[package]
name = "RustBot"
version = "0.1.0"
edition = "2018"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
http = "1.2.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"